[package]
name = "nanoterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
image = "0.24.2"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
tui = "0.19.0"

tui-image = { git = "https://github.com/Kurtsley/tui-image.git", branch = "update-tui-19"}
